--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,13 @@ dependencies:
   flutter:
     sdk: flutter
   collection: ^1.17.0
-  uuid: '>=3.0.7 <5.0.0'
+#  uuid: '>=3.0.7 <5.0.0'
+  uuid: ^4.2.2
   json_annotation: ^4.8.1
   encrypt: ^5.0.1
   shared_preferences: ^2.2.2
-  http: '>=0.13.6 <2.0.0'
+#  http: '>=0.13.6 <2.0.0'
+  http: ^1.1.0
   logger: '>=1.4.0 <3.0.0'
   mime: ^1.0.4
   connectivity_plus: '>=5.0.1 <7.0.0'
