--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,13 @@ dependencies:
   flutter:
     sdk: flutter
   collection: ^1.15.0
-  uuid: ^3.0.0
+#  uuid: ^3.0.0
+  uuid: ^4.2.2
   json_annotation: ^4.0.0
   encrypt: ^5.0.0
   shared_preferences: ^2.0.0
-  http: ^0.13.0
+#  http: ^0.13.0
+  http: ^1.1.0
   logger: ^1.0.0
   mime: ^1.0.0
   connectivity_plus: ^4.0.1
