--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   http: ^1.1.0
   logger: ^1.0.0
   mime: ^1.0.0
-  connectivity_plus: ^4.0.1
+#  connectivity_plus: ^4.0.1
+  connectivity_plus: ^5.0.2
   meta: ^1.3.0
   http_parser: ^4.0.0
   web_socket_channel: ^2.1.0
